using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;

namespace _2024_b1_individueel.Abstract;

/// <summary>
/// Base entity to extend all other entities from.
/// </summary>
public abstract class Entity
{
    /// <summary>
    /// Unique identifier for this entity.
    /// </summary>
    [Key]
    [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
    public int Identifier { get; set; }
}
