@startuml class

abstract class Entity {
  + int Identifier
}

class Flag {
  + string CountryCode
  + string CorrectAnswer

  + int FlagDeckIdentifier
  + FlagDeck FlagDeck

  + bool IsCorrectAnswer()
}

class FlagDeck {
  + string Name
  + List<Flag> Flags
  + FlagDeck Shuffle()
}

class Score {
  + string AchievedBy
  + int AchievedScore
  + int FlagDeckIdentifier
  + FlagDeck FlagDeck
}


Entity <|-- Flag
Entity <|-- FlagDeck
Entity <|-- Score

FlagDeck --> Flag : 1:n
FlagDeck --> Score : 1:n

@enduml
